--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(controller\.php|assets|views)
+RewriteCond $1 !^(controller\.php|assets)
 RewriteRule ^(.*)$ /controller.php/$1 [L]
