--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,4 +1,8 @@
-Options All -Indexes
+DirectoryIndex front_controller.php
+
 RewriteEngine on
+RewriteBase /
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^(front_controller\.php|assets)
-RewriteRule ^(.*)$ /front_controller.php/$1 [L]
+RewriteRule ^(.*)$ front_controller.php/$1 [L]
